# audstream

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
audstream/: __init__.py  voiceing.py
audstream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
audstream/utils/: time.py  version.py
docs/: audstream.rst  conf.py  index.rst  modules.rst
