[project]
name = "audstream"
version = "0.0.5"
authors = [
  { name="ryzmae", email="juwennagpal6@gmail.com" },
]
description = "A simple audio streaming library for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ceeq9717/audstream"
"Bug Tracker" = "https://github.com/ceeq9717/audstream/issues"